// Copyright 2023 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.devicetrust.v1;

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/devicetrust/v1;devicetrustv1";

// Source of device, for devices that are managed by external systems
// (for example, MDMs).
message DeviceSource {
  // Name of the source.
  // Matches the name of the corresponding MDM service, if applicable.
  // Readonly.
  string name = 1;

  // Origin of the source.
  // Readonly.
  DeviceOrigin origin = 2;
}

// Origin of a device.
enum DeviceOrigin {
  // Unspecified or absent origin.
  DEVICE_ORIGIN_UNSPECIFIED = 0;

  // Devices originated from direct API usage.
  DEVICE_ORIGIN_API = 1;

  // Devices originated from Jamf sync.
  DEVICE_ORIGIN_JAMF = 2;

  // Source originated from Microsoft Intune sync.
  DEVICE_ORIGIN_INTUNE = 3;
}
